Solving HTTP Error

--- a/NLP/03. Named-entity recognition.ipynb
+++ b/NLP/03. Named-entity recognition.ipynb
@@ -7,7 +7,7 @@
     "hidePrompt": false
    },
    "source": [
-    "## Word counts with bag-of-words\n",
+    "## Named-entity recognition\n",
     "\n",
     "- learn how to identify the who, what, and where of texts using pre-trained models on English and non-English text. \n",
     "- also learn how to use some new libraries, polyglot and spaCy, to add to NLP toolbox."
@@ -302,7 +302,6 @@
     "with open('News articles/french.txt',mode= 'r',encoding=\"utf-8\" ) as file:\n",
     "    article = file.read()\n",
     "\n",
-    "# download use poly16 with polyglot_path\n",
     "#!polyglot download ner2.fr\n",
     "#!polyglot download embeddings2.fr"
    ]
@@ -658,10 +657,8 @@
     "        count += 1\n",
     "        print(ent)\n",
     "\n",
-    "# Print count\n",
     "print(count)\n",
-    "print(len(txt.entities))\n",
-    "#print(txt.entities)"
+    "print(len(txt.entities))\n"
    ]
   },
   {
