Update Classification with xgboost

--- a/Extreme gradient boosting with Xgboost/01. Classification-with-xgboost.ipynb
+++ b/Extreme gradient boosting with Xgboost/01. Classification-with-xgboost.ipynb
@@ -6,6 +6,9 @@
    "source": [
     "## Classification-with-xgboost\n",
     "\n",
+    "- introdution about the fundamental idea behind XGBoost—boosted learners. \n",
+    "- apply it to solve a common classification problem found in industry: predicting whether a customer will stop being a customer at some point in the future.\n",
+    "\n",
     "#### Dataset\n",
     "This dataset contains imaginary data from a ride-sharing app with user behaviors over their first month of app usage in a set of imaginary cities as well as whether they used the service 5 months after sign-up. \n",
     "\n",
