--- a/Project/Find Movie Similarity from Plot Summaries/FindMovieSimilarity.ipynb
+++ b/Project/Find Movie Similarity from Plot Summaries/FindMovieSimilarity.ipynb
@@ -7,34 +7,9 @@
     "## 1. Import and observe dataset\n",
     "<p>We all love watching movies! There are some movies we like, some we don't. Most people have a preference for movies of a similar genre. Some of us love watching action movies, while some of us like watching horror. Some of us like watching movies that have ninjas in them, while some of us like watching superheroes.</p>\n",
     "<p>Movies within a genre often share common base parameters. Consider the following two movies:</p>\n",
-    "<p><img style=\"margin:5px 20px 5px 1px; height: 250px; display: inline-block;\" alt=\"2001: A Space Odyssey\" src=\"https://assets.datacamp.com/production/project_648/img/movie1.jpg\">\n",
-    "<img style=\"margin:5px 20px 5px 1px; height: 250px; display: inline-block;\" alt=\"Close Encounters of the Third Kind\" src=\"https://assets.datacamp.com/production/project_648/img/movie2.jpg\"></p>\n",
-    "<p>Both movies, <em>2001: A Space Odyssey</em> and <em>Close Encounters of the Third Kind</em>, are movies based on aliens coming to Earth. I've seen both, and they indeed share many similarities. We could conclude that both of these fall into the same genre of movies based on intuition, but that's no fun in a data science context. In this notebook, we will quantify the similarity of movies based on their plot summaries available on IMDb and Wikipedia, then separate them into groups, also known as clusters. We'll create a dendrogram to represent how closely the movies are related to each other.</p>\n",
-    "<p>Let's start by importing the dataset and observing the data provided.</p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dc": {
-     "key": "3"
-    },
-    "deletable": false,
-    "editable": false,
-    "heading_collapsed": true,
-    "run_control": {
-     "frozen": true
-    },
-    "tags": [
-     "context"
-    ]
-   },
-   "source": [
-    "## 1. Import and observe dataset\n",
-    "<p>We all love watching movies! There are some movies we like, some we don't. Most people have a preference for movies of a similar genre. Some of us love watching action movies, while some of us like watching horror. Some of us like watching movies that have ninjas in them, while some of us like watching superheroes.</p>\n",
-    "<p>Movies within a genre often share common base parameters. Consider the following two movies:</p>\n",
-    "<p><img style=\"margin:5px 20px 5px 1px; height: 250px; display: inline-block;\" alt=\"2001: A Space Odyssey\" src=\"https://assets.datacamp.com/production/project_648/img/movie1.jpg\">\n",
-    "<img style=\"margin:5px 20px 5px 1px; height: 250px; display: inline-block;\" alt=\"Close Encounters of the Third Kind\" src=\"https://assets.datacamp.com/production/project_648/img/movie2.jpg\"></p>\n",
+    "\n",
+    "<img src=https://image.slidesharecdn.com/tensorflowppt-160408142819/95/tensorflow-4-638.jpg?cb=1460125744 width=\"500\"/>\n",
+    "\n",
     "<p>Both movies, <em>2001: A Space Odyssey</em> and <em>Close Encounters of the Third Kind</em>, are movies based on aliens coming to Earth. I've seen both, and they indeed share many similarities. We could conclude that both of these fall into the same genre of movies based on intuition, but that's no fun in a data science context. In this notebook, we will quantify the similarity of movies based on their plot summaries available on IMDb and Wikipedia, then separate them into groups, also known as clusters. We'll create a dendrogram to represent how closely the movies are related to each other.</p>\n",
     "<p>Let's start by importing the dataset and observing the data provided.</p>"
    ]
@@ -46,7 +21,6 @@
     "dc": {
      "key": "3"
     },
-    "hidden": true,
     "scrolled": false,
     "tags": [
      "sample_code"
