--- a/Project/Find Movie Similarity from Plot Summaries/FindMovieSimilarity.ipynb
+++ b/Project/Find Movie Similarity from Plot Summaries/FindMovieSimilarity.ipynb
@@ -6,10 +6,15 @@
    "source": [
     "## 1. Import and observe dataset\n",
     "<p>We all love watching movies! There are some movies we like, some we don't. Most people have a preference for movies of a similar genre. Some of us love watching action movies, while some of us like watching horror. Some of us like watching movies that have ninjas in them, while some of us like watching superheroes.</p>\n",
-    "<p>Movies within a genre often share common base parameters. Consider the following two movies:</p>\n",
-    "\n",
-    "<img src=\"image/movie1.png\" width =\"150\"/>\n",
-    "<img src=\"image/movie2.png\" width =\"150\"/>"
+    "<p>Movies within a genre often share common base parameters. Consider the following two movies:</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"image/movie1.png\" width=\"150\"/>\n",
+    "<img src=\"image/movie2.png\" width=\"150\"/>"
    ]
   },
   {
