--- a/Project/Find Movie Similarity from Plot Summaries/FindMovieSimilarity.ipynb
+++ b/Project/Find Movie Similarity from Plot Summaries/FindMovieSimilarity.ipynb
@@ -5,23 +5,7 @@
    "metadata": {},
    "source": [
     "## 1. Import and observe dataset\n",
-    "<p>We all love watching movies! There are some movies we like, some we don't. Most people have a preference for movies of a similar genre. Some of us love watching action movies, while some of us like watching horror. Some of us like watching movies that have ninjas in them, while some of us like watching superheroes.</p>\n",
-    "<p>Movies within a genre often share common base parameters. Consider the following two movies:</p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"image/movie1.png\" width=\"150\"/>\n",
-    "<img src=\"image/movie2.png\" width=\"150\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
+    "<p>We all love watching movies! There are some movies we like, some we don't. Most people have a preference for movies of a similar genre. Some of us love watching action movies, while some of us like watching horror. Some of us like watching movies that have ninjas in them, while some of us like watching superheroes. Movies within a genre often share common base parameters.</p>\n",
     "<p>Both movies, <em>2001: A Space Odyssey</em> and <em>Close Encounters of the Third Kind</em>, are movies based on aliens coming to Earth. I've seen both, and they indeed share many similarities. We could conclude that both of these fall into the same genre of movies based on intuition, but that's no fun in a data science context. In this notebook, we will quantify the similarity of movies based on their plot summaries available on IMDb and Wikipedia, then separate them into groups, also known as clusters. We'll create a dendrogram to represent how closely the movies are related to each other.</p>\n",
     "<p>Let's start by importing the dataset and observing the data provided.</p>"
    ]
@@ -697,26 +681,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "dc": {
-     "key": "52"
-    },
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    },
-    "tags": [
-     "context"
-    ]
-   },
+   "metadata": {},
    "source": [
     "## 8. Import KMeans and create clusters\n",
     "<p>To determine how closely one movie is related to the other by the help of unsupervised learning, we can use clustering techniques. Clustering is the method of grouping together a number of items such that they exhibit similar properties. According to the measure of similarity desired, a given sample of items can have one or more clusters. </p>\n",
     "<p>A good basis of clustering in our dataset could be the genre of the movies. Say we could have a cluster '0' which holds movies of the 'Drama' genre. We would expect movies like <em>Chinatown</em> or <em>Psycho</em> to belong to this cluster. Similarly, the cluster '1' in this project holds movies which belong to the 'Adventure' genre (<em>Lawrence of Arabia</em> and the <em>Raiders of the Lost Ark</em>, for example).</p>\n",
-    "<p>K-means is an algorithm which helps us to implement clustering in Python. The name derives from its method of implementation: the given sample is divided into <b><i>K</i></b> clusters where each cluster is denoted by the <b><i>mean</i></b> of all the items lying in that cluster. </p>\n",
-    "<p>We get the following distribution for the clusters:</p>\n",
-    "<p><img src=\"https://assets.datacamp.com/production/project_648/img/bar_clusters.png\" alt=\"bar graph of clusters\"></p>"
+    "<p>K-means is an algorithm which helps us to implement clustering in Python. The name derives from its method of implementation: the given sample is divided into <b><i>K</i></b> clusters where each cluster is denoted by the <b><i>mean</i></b> of all the items lying in that cluster. </p>\n"
    ]
   },
   {
